<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/bg_solid">

            <TextView
                android:id="@+id/tvRepositoryName"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_repository"
                android:textColor="@color/colorInfo"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_repository"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/label"
                android:background="@drawable/capsule_border"
                android:paddingHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvRepositoryName"
                app:layout_constraintStart_toEndOf="@+id/tvRepositoryName"
                app:layout_constraintTop_toTopOf="@+id/tvRepositoryName" />

            <TextView
                android:id="@+id/tvRepositoryDescription"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>