<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/bg_solid">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImageAvatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorDark">

                    <ImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:contentDescription="@string/image_avatar"
                        android:src="@color/colorOnSurfaceSecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAccountName"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/github_account_name"
                app:layout_constraintStart_toEndOf="@+id/cardImageAvatar"
                app:layout_constraintTop_toTopOf="@+id/cardImageAvatar" />

            <TextView
                android:id="@+id/tvUsername"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/github_username"
                app:layout_constraintStart_toEndOf="@+id/cardImageAvatar"
                app:layout_constraintTop_toBottomOf="@+id/tvAccountName" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:flexWrap="wrap"
                app:alignItems="flex_start"
                app:justifyContent="flex_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardImageAvatar"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>