<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_solid"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardImageAvatar"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            app:cardCornerRadius="50dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorDark">

                                <ImageView
                                    android:id="@+id/ivAvatar"
                                    android:layout_width="0dp"
                                    android:layout_height="0dp"
                                    android:contentDescription="@string/image_avatar"
                                    android:src="@color/colorOnSurfaceSecondary"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/llcAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="@+id/cardImageAvatar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/cardImageAvatar"
                            app:layout_constraintTop_toTopOf="@+id/cardImageAvatar">

                            <TextView
                                android:id="@+id/tvAccountName"
                                style="@style/TextBold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/github_account_name"
                                android:textSize="22sp" />

                            <TextView
                                android:id="@+id/tvUsername"
                                style="@style/TextAppearance.Material3.BodySmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/github_username"
                                android:textSize="18sp" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAttribute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_attribute" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Exception-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/exceptionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="100dp"
                        android:contentDescription="@string/broken_link"
                        android:src="@drawable/ic_broken_link" />

                    <TextView
                        android:id="@+id/tvTittle"
                        style="@style/TextBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/dummy_text" />

                    <TextView
                        android:id="@+id/tvDescription"
                        style="@style/TextItalic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/dummy_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Shimmer-->
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/shimmer_repository_item" />

                        <include layout="@layout/shimmer_repository_item" />

                        <include layout="@layout/shimmer_repository_item" />

                        <include layout="@layout/shimmer_repository_item" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <!--Content-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRepository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_repository" />

                <Button
                    android:id="@+id/btnMoreRepositories"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:text="@string/more_repositories" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>